// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI collect > should run Code coverage plugin that runs coverage tool and creates report.json 1`] = `
{
  "categories": [
    {
      "refs": [
        {
          "plugin": "coverage",
          "slug": "coverage",
          "type": "group",
          "weight": 1,
        },
      ],
      "slug": "code-coverage",
      "title": "Code coverage",
    },
  ],
  "packageName": "@code-pushup/core",
  "plugins": [
    {
      "audits": [
        {
          "description": "Measures how many functions were called in at least one test.",
          "details": {
            "issues": [
              {
                "message": "Function onSubmit is not called in any test case.",
                "severity": "error",
                "source": {
                  "file": "examples/react-todos-app/src/components/CreateTodo.jsx",
                  "position": {
                    "startLine": 13,
                  },
                },
              },
              {
                "message": "Function onInput is not called in any test case.",
                "severity": "error",
                "source": {
                  "file": "examples/react-todos-app/src/components/CreateTodo.jsx",
                  "position": {
                    "startLine": 21,
                  },
                },
              },
              {
                "message": "Function onInput is not called in any test case.",
                "severity": "error",
                "source": {
                  "file": "examples/react-todos-app/src/components/TodoFilter.jsx",
                  "position": {
                    "startLine": 9,
                  },
                },
              },
              {
                "message": "Function onChange is not called in any test case.",
                "severity": "error",
                "source": {
                  "file": "examples/react-todos-app/src/components/TodoFilter.jsx",
                  "position": {
                    "startLine": 17,
                  },
                },
              },
            ],
          },
          "displayValue": "55.6 %",
          "score": 0.5556,
          "slug": "function-coverage",
          "title": "Function coverage",
          "value": 55.55555555555556,
        },
        {
          "description": "Measures how many branches were executed after conditional statements in at least one test.",
          "details": {
            "issues": [
              {
                "message": "1st branch is not taken in any test case.",
                "severity": "error",
                "source": {
                  "file": "examples/react-todos-app/src/index.jsx",
                  "position": {
                    "startLine": 1,
                  },
                },
              },
            ],
          },
          "displayValue": "87.5 %",
          "score": 0.875,
          "slug": "branch-coverage",
          "title": "Branch coverage",
          "value": 87.5,
        },
        {
          "description": "Measures how many lines of code were executed in at least one test.",
          "details": {
            "issues": [
              {
                "message": "Lines 1-6 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/index.jsx",
                  "position": {
                    "endLine": 6,
                    "startLine": 1,
                  },
                },
              },
              {
                "message": "Lines 14-17 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/components/CreateTodo.jsx",
                  "position": {
                    "endLine": 17,
                    "startLine": 14,
                  },
                },
              },
              {
                "message": "Lines 22-23 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/components/CreateTodo.jsx",
                  "position": {
                    "endLine": 23,
                    "startLine": 22,
                  },
                },
              },
              {
                "message": "Lines 10-11 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/components/TodoFilter.jsx",
                  "position": {
                    "endLine": 11,
                    "startLine": 10,
                  },
                },
              },
              {
                "message": "Lines 18-19 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/components/TodoFilter.jsx",
                  "position": {
                    "endLine": 19,
                    "startLine": 18,
                  },
                },
              },
              {
                "message": "Lines 7-28 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/components/TodoList.jsx",
                  "position": {
                    "endLine": 28,
                    "startLine": 7,
                  },
                },
              },
              {
                "message": "Lines 12-13 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/hooks/useTodos.js",
                  "position": {
                    "endLine": 13,
                    "startLine": 12,
                  },
                },
              },
              {
                "message": "Lines 18-37 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/hooks/useTodos.js",
                  "position": {
                    "endLine": 37,
                    "startLine": 18,
                  },
                },
              },
              {
                "message": "Lines 41-45 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/hooks/useTodos.js",
                  "position": {
                    "endLine": 45,
                    "startLine": 41,
                  },
                },
              },
              {
                "message": "Lines 54-60 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "examples/react-todos-app/src/hooks/useTodos.js",
                  "position": {
                    "endLine": 60,
                    "startLine": 54,
                  },
                },
              },
            ],
          },
          "displayValue": "62.1 %",
          "score": 0.6211,
          "slug": "line-coverage",
          "title": "Line coverage",
          "value": 62.10526315789474,
        },
      ],
      "description": "Official Code PushUp code coverage plugin.",
      "docsUrl": "https://www.npmjs.com/package/@code-pushup/coverage-plugin/",
      "groups": [
        {
          "description": "Group containing all defined coverage types as audits.",
          "refs": [
            {
              "slug": "function-coverage",
              "weight": 6,
            },
            {
              "slug": "branch-coverage",
              "weight": 3,
            },
            {
              "slug": "line-coverage",
              "weight": 1,
            },
          ],
          "slug": "coverage",
          "title": "Code coverage metrics",
        },
      ],
      "icon": "folder-coverage-open",
      "packageName": "@code-pushup/coverage-plugin",
      "slug": "coverage",
      "title": "Code coverage",
    },
  ],
}
`;

exports[`CLI collect > should run Code coverage plugin which collects passed results and creates report.json 1`] = `
{
  "categories": [
    {
      "refs": [
        {
          "plugin": "coverage",
          "slug": "coverage",
          "type": "group",
          "weight": 1,
        },
      ],
      "slug": "code-coverage",
      "title": "Code coverage",
    },
  ],
  "packageName": "@code-pushup/core",
  "plugins": [
    {
      "audits": [
        {
          "description": "Measures how many functions were called in at least one test.",
          "details": {
            "issues": [
              {
                "message": "Function formatReportScore is not called in any test case.",
                "severity": "error",
                "source": {
                  "file": "src/lib/partly-covered/utils.ts",
                  "position": {
                    "startLine": 2,
                  },
                },
              },
              {
                "message": "Function sortReport is not called in any test case.",
                "severity": "error",
                "source": {
                  "file": "src/lib/not-covered/sorting.ts",
                  "position": {
                    "startLine": 1,
                  },
                },
              },
            ],
          },
          "displayValue": "60 %",
          "score": 0.6,
          "slug": "function-coverage",
          "title": "Function coverage",
          "value": 60,
        },
        {
          "description": "Measures how many branches were executed after conditional statements in at least one test.",
          "details": {
            "issues": [
              {
                "message": "2nd branch is not taken in any test case.",
                "severity": "error",
                "source": {
                  "file": "src/lib/partly-covered/utils.ts",
                  "position": {
                    "startLine": 6,
                  },
                },
              },
              {
                "message": "2nd branch is not taken in any test case.",
                "severity": "error",
                "source": {
                  "file": "src/lib/partly-covered/utils.ts",
                  "position": {
                    "startLine": 10,
                  },
                },
              },
              {
                "message": "1st branch is not taken in any test case.",
                "severity": "error",
                "source": {
                  "file": "src/lib/not-covered/sorting.ts",
                  "position": {
                    "startLine": 7,
                  },
                },
              },
              {
                "message": "2nd branch is not taken in any test case.",
                "severity": "error",
                "source": {
                  "file": "src/lib/not-covered/sorting.ts",
                  "position": {
                    "startLine": 7,
                  },
                },
              },
            ],
          },
          "displayValue": "76.5 %",
          "score": 0.7647,
          "slug": "branch-coverage",
          "title": "Branch coverage",
          "value": 76.47058823529412,
        },
        {
          "description": "Measures how many lines of code were executed in at least one test.",
          "details": {
            "issues": [
              {
                "message": "Lines 7-9 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "src/lib/partly-covered/utils.ts",
                  "position": {
                    "endLine": 9,
                    "startLine": 7,
                  },
                },
              },
              {
                "message": "Lines 1-5 are not covered in any test case.",
                "severity": "warning",
                "source": {
                  "file": "src/lib/not-covered/sorting.ts",
                  "position": {
                    "endLine": 5,
                    "startLine": 1,
                  },
                },
              },
            ],
          },
          "displayValue": "68 %",
          "score": 0.68,
          "slug": "line-coverage",
          "title": "Line coverage",
          "value": 68,
        },
      ],
      "description": "Official Code PushUp code coverage plugin.",
      "docsUrl": "https://www.npmjs.com/package/@code-pushup/coverage-plugin/",
      "groups": [
        {
          "description": "Group containing all defined coverage types as audits.",
          "refs": [
            {
              "slug": "function-coverage",
              "weight": 6,
            },
            {
              "slug": "branch-coverage",
              "weight": 3,
            },
            {
              "slug": "line-coverage",
              "weight": 1,
            },
          ],
          "slug": "coverage",
          "title": "Code coverage metrics",
        },
      ],
      "icon": "folder-coverage-open",
      "packageName": "@code-pushup/coverage-plugin",
      "slug": "coverage",
      "title": "Code coverage",
    },
  ],
}
`;
